fix: overflow for scaled page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -79,7 +79,7 @@
   @page {
     margin: 0;
   }
-  #printable {
-    scale: 1 !important;
+  #main-grid {
+    transform: scale(1) !important;
   }
 }
